<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="8dp"
    app:cardBackgroundColor="#979B79"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/payerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#EDE5D6"/>

        <TextView
            android:id="@+id/placeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#EDE5D6"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt3"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#EDE5D6"/>

    </LinearLayout>



</androidx.cardview.widget.CardView>